---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2021-03-29
  Locale:
    - Added alerts to locale
    - Customized alerts with localised name of entities
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2021-03-29
  Changes:
    - Icon and message overhaul (by snouz)
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2021-03-28
  Bugfixes:
    - Added migration to add car index to existing saves
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2021-03-28
  Changes:
    - Added car ammo alerts, if car has guns (this should apply to modded cars and tanks)
    - Added config options to display/hide car and/or turret ammo alerts
    - Added german locale
    - Mod display name is now less focused on turrets
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020-12-02
  Changes:
    - Version bump for base game 1.1
---------------------------------------------------------------------------------------------------
Version: 0.18.3
Date: 2020-03-21
  Changes:
    - Migrated on_event to on_nth_tick for performance
  Bugfixes:
    - Added missing initialization of turret index
---------------------------------------------------------------------------------------------------
Version: 0.18.2
Date: 2020-03-20
  Changes:
    - Redesigned surface handling again to be more performant
---------------------------------------------------------------------------------------------------
Version: 0.18.1
Date: 2020-03-19
  Changes:
    - Added changelog file
    - Changed dependency to base 0.18
  Bugfixes:
    - Redesigned surface handling to ensure compatibility with other planets and Blueprint Lab