@@ -1,4 +1,0 @@
-script.on_configuration_changed(function (event)
-	-- car index init fix
-	global.car_entities = {}
-end)
